# open-code-projects

./: .pre-commit-config.yaml  AGENTS.md  opencode.json
workflows/: .env.example  README.md  pyproject.toml
workflows/DoNotChange/: generate_image_gpt_image_1_5.py  hello_azure_openai.py
workflows/comicbook/: __init__.py  config.py  db.py  deps.py  execution.py  fingerprint.py  graph.py  image_client.py  input_file.py  metadata_prompts.py  repo_protection.py  router_llm.py  router_prompts.py  run.py  runtime_deps.py  state.py  upload_graph.py  upload_run.py
workflows/comicbook/nodes/: __init__.py  cache_lookup.py  generate_images_serial.py  ingest.py  load_templates.py  persist_template.py  router.py  summarize.py  upload_backfill_metadata.py  upload_decide_write_mode.py  upload_load_file.py  upload_parse_and_validate.py  upload_persist.py  upload_resume_filter.py  upload_summarize.py
workflows/examples/: prompts.sample.csv  prompts.sample.json  single_portrait_graph.py
workflows/pipelines/shared/: config.py  db.py  deps.py  execution.py  fingerprint.py  logging.py  repo_protection.py  responses.py  runtime_deps.py  state.py
workflows/tests/image_prompt_gen/: __init__.py  support.py  test_budget_guard.py  test_example_single_portrait.py  test_graph.py  test_graph_logging.py  test_graph_scenarios.py  test_helpers.py  test_image_client.py  test_input_file_support.py  test_node_cache_lookup.py  test_node_generate_images_serial.py  test_node_ingest_summarize.py  test_node_load_templates.py  test_node_persist_template.py  test_node_router.py  test_router_node.py  (+2 more)
(+189 files in other folders)
