[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comicbook"
version = "0.1.0"
description = "Image prompt generation workflow foundations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20,<1",
  "httpx>=0.27,<1",
  "langchain-core~=0.3.0",
  "langgraph~=0.3.0",
  "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.setuptools.packages.find]
include = ["pipelines*", "comicbook*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
